# ncnn_for_MeterReader

./: readme.md
asforncnn/: settings.gradle
asforncnn/app/: build.gradle
asforncnn/app/src/androidTest/java/com/example/asnet/: ExampleInstrumentedTest.java
asforncnn/app/src/main/: AndroidManifest.xml
asforncnn/app/src/main/cpp/: CMakeLists.txt  MeterReader.cpp  MeterReader.h  native-lib.cpp
asforncnn/app/src/main/java/com/example/asnet/: AssetCopyer.java  MainActivity.java
asforncnn/app/src/main/res/layout/: activity_main.xml
asforncnn/app/src/main/res/values/: strings.xml  themes.xml
asforncnn/app/src/main/res/values-night/: themes.xml
asforncnn/app/src/test/java/com/example/asnet/: ExampleUnitTest.java
asforncnn/gradle/wrapper/: gradle-wrapper.properties
asforncnn/opencv/: build.gradle
ncnntest/: MeterReader.cpp  MeterReader.h  ncnntest.cpp
transpt/: transpt.py
